bug correction